--- a/sass/partials/_flexbox.scss
+++ b/sass/partials/_flexbox.scss
@@ -1,41 +1,205 @@
-/* http://coding.smashingmagazine.com/2013/05/22/centering-elements-with-flexbox */
 
-html {
-   height: 100%;
-} 
+   body {
+    width: 978px;
+    margin: 0 auto;   
+    display: -ms-flexbox;
+    display: -webkit-flex;
+    display: flex;
+    -webkit-flex-direction: row;
+    -ms-flex-direction: row;
+    flex-direction: row;
+    -webkit-flex-wrap: nowrap;
+    -ms-flex-wrap: nowrap;
+    flex-wrap: nowrap;
+    -webkit-align-content: flex-start;
+    -ms-flex-line-pack: start;
+    align-content: flex-start;
+    -webkit-align-items: flex-start;
+    -ms-flex-align: start;
+    align-items: flex-start;
+     -webkit-justify-content: space-between;
+    justify-content: space-between;
+    }
 
-body {
-   display: -webkit-box;   /* OLD: Safari,  iOS, Android browser, older WebKit browsers.  */
-   display: -moz-box;      /* OLD: Firefox (buggy) */ 
-   display: -ms-flexbox;   /* MID: IE 10 */
-   display: -webkit-flex;  /* NEW, Chrome 21+ */
-   display: flex;          /* NEW: Opera 12.1, Firefox 22+ */
+.flex-item:nth-child(1) {
+    -webkit-order: 0;
+    -ms-flex-order: 0;
+    order: 0;
+    -webkit-flex: 0 1 auto;
+    -ms-flex: 0 1 auto;
+    flex: 0 1 auto;
+    -webkit-align-self: auto;
+    -ms-flex-item-align: auto;
+    align-self: auto;
+    width: 21.09375%;
+    
+    }
 
-   -webkit-box-align: center; -moz-box-align: center; /* OLD… */
-   -ms-flex-align: center; /* You know the drill now… */
-   -webkit-align-items: center;
-   align-items: center;
+.flex-item:nth-child(2) {
+    -webkit-order: 0;
+    -ms-flex-order: 0;
+    order: 0;
+    -webkit-flex: 0 1 auto;
+    -ms-flex: 0 1 auto;
+    flex: 0 1 auto;
+    -webkit-align-self: auto;
+    -ms-flex-item-align: auto;
+    align-self: auto;
+    width: 35.15625%;
+    }
 
-   -webkit-box-pack: center; -moz-box-pack: center; 
-   -ms-flex-pack: center; 
-   -webkit-justify-content: center;
-   justify-content: center;
+.flex-item:nth-child(3) {
+    -webkit-order: 0;
+    -ms-flex-order: 0;
+    order: 0;
+    -webkit-flex: 0 1 auto;
+    -ms-flex: 0 1 auto;
+    flex: 0 1 auto;
+    -webkit-align-self: auto;
+    -ms-flex-item-align: auto;
+    align-self: auto;
+    width: 35.15625%;
+    }
 
-   margin: 0;
-   height: 100%;
-   width: 100% /* needed for Firefox */
-} 
 
-div[role="main"] {
-   display: -webkit-box; display: -moz-box;
-   display: -ms-flexbox;
-  /* display: -webkit-flex; */
-   display: flex;
- 
-   -webkit-box-align: center; -moz-box-align: center;
-   -ms-flex-align: center;
-   -webkit-align-items: center;
-   align-items: center;
+nav {
+    display: -ms-flexbox;
+    display: -webkit-flex;
+    display: flex;
+    -webkit-flex-direction: column;
+    -ms-flex-direction: column;
+    flex-direction: column;
+    -webkit-flex-wrap: nowrap;
+    -ms-flex-wrap: nowrap;
+    flex-wrap: nowrap;
+    -webkit-align-content: flex-start;
+    -ms-flex-line-pack: start;
+    align-content: flex-start;
+    -webkit-align-items: flex-start;
+    -ms-flex-align: start;
+    align-items: flex-start;
+     -webkit-justify-content: space-between;
+    justify-content: space-between;
+    height: 409px;
+    
+}
+.navi:nth-child(1) {
+    -webkit-order: 0;
+    -ms-flex-order: 0;
+    order: 0;
+    -webkit-flex: 0 1 auto;
+    -ms-flex: 0 1 auto;
+    flex: 0 1 auto;
+    -webkit-align-self: auto;
+    -ms-flex-item-align: auto;
+    align-self: auto;
+    
+    }
 
-   height: 10rem;
+.navi:nth-child(2) {
+    -webkit-order: 0;
+    -ms-flex-order: 0;
+    order: 0;
+    -webkit-flex: 0 1 auto;
+    -ms-flex: 0 1 auto;
+    flex: 0 1 auto;
+    -webkit-align-self: auto;
+    -ms-flex-item-align: auto;
+    align-self: auto;
+   
+    }
+
+.navi {
+    border: 2px solid #999;
+    height: 189px;
+    width: 216px;
+}
+
+
+.main {
+    height: 816px;
+}
+
+
+.main, section {
+    display: -ms-flexbox;
+    display: -webkit-flex;
+    display: flex;
+    -webkit-flex-direction: column;
+    -ms-flex-direction: column;
+    flex-direction: column;
+    -webkit-flex-wrap: nowrap;
+    -ms-flex-wrap: nowrap;
+    flex-wrap: nowrap;
+    -webkit-align-content: flex-start;
+    -ms-flex-line-pack: start;
+    align-content: flex-start;
+    -webkit-align-items: flex-start;
+    -ms-flex-align: start;
+    align-items: flex-start;
+     -webkit-justify-content: space-between;
+    justify-content: space-between;
+    width: 360px;
+    
+}
+section {
+    height: 601px;
+
+}
+
+header{
+    -webkit-order: 0;
+    -ms-flex-order: 0;
+    order: 0;
+    -webkit-flex: 0 1 auto;
+    -ms-flex: 0 1 auto;
+    flex: 0 1 auto;
+    -webkit-align-self: auto;
+    -ms-flex-item-align: auto;
+    align-self: auto;
+    border: 2px solid #999;
+    height: 189px;
+    width: 360px;
+}
+article:nth-child(1) {
+    -webkit-order: 0;
+    -ms-flex-order: 0;
+    order: 0;
+    -webkit-flex: 0 1 auto;
+    -ms-flex: 0 1 auto;
+    flex: 0 1 auto;
+    -webkit-align-self: auto;
+    -ms-flex-item-align: auto;
+    align-self: auto;
+    border: 2px solid #999;
+    height: 378px;
+    width: 360px;
+    }
+article:nth-child(2) {
+    -webkit-order: 0;
+    -ms-flex-order: 0;
+    order: 0;
+    -webkit-flex: 0 1 auto;
+    -ms-flex: 0 1 auto;
+    flex: 0 1 auto;
+    -webkit-align-self: auto;
+    -ms-flex-item-align: auto;
+    align-self: auto;
+    border: 2px solid #999;
+    height: 189px;
+    width: 360px;
+    }
+
+
+
+
+
+
+
+
+aside {
+    border: 2px solid #999;
+    height: 400px;
+    
+
 }
