--- a/css/styles.css
+++ b/css/styles.css
@@ -1,4 +1,3 @@
-@charset "UTF-8";
 /* line 55, ../sass/partials/_normalize.scss */
 article, aside, details, figcaption, figure, footer, header, hgroup, nav, section, summary { display: block; }
 
@@ -155,15 +154,50 @@ table { border-collapse: collapse; border-spacing: 0; }
 /* line 2, ../sass/partials/_cookbook.scss */
 .icon { max-width: 1.2em; max-height: 1.2em; }
 
-/* http://coding.smashingmagazine.com/2013/05/22/centering-elements-with-flexbox */
-/* line 3, ../sass/partials/_flexbox.scss */
-html { height: 100%; }
+/* line 2, ../sass/partials/_flexbox.scss */
+body { width: 978px; margin: 0 auto; display: -ms-flexbox; display: -webkit-flex; display: flex; -webkit-flex-direction: row; -ms-flex-direction: row; flex-direction: row; -webkit-flex-wrap: nowrap; -ms-flex-wrap: nowrap; flex-wrap: nowrap; -webkit-align-content: flex-start; -ms-flex-line-pack: start; align-content: flex-start; -webkit-align-items: flex-start; -ms-flex-align: start; align-items: flex-start; -webkit-justify-content: space-between; justify-content: space-between; }
 
-/* line 7, ../sass/partials/_flexbox.scss */
-body { display: -webkit-box; /* OLD: Safari,  iOS, Android browser, older WebKit browsers.  */ display: -moz-box; /* OLD: Firefox (buggy) */ display: -ms-flexbox; /* MID: IE 10 */ display: -webkit-flex; /* NEW, Chrome 21+ */ display: flex; /* NEW: Opera 12.1, Firefox 22+ */ -webkit-box-align: center; -moz-box-align: center; /* OLD… */ -ms-flex-align: center; /* You know the drill now… */ -webkit-align-items: center; align-items: center; -webkit-box-pack: center; -moz-box-pack: center; -ms-flex-pack: center; -webkit-justify-content: center; justify-content: center; margin: 0; height: 100%; width: 100%; }
+/* line 24, ../sass/partials/_flexbox.scss */
+.flex-item:nth-child(1) { -webkit-order: 0; -ms-flex-order: 0; order: 0; -webkit-flex: 0 1 auto; -ms-flex: 0 1 auto; flex: 0 1 auto; -webkit-align-self: auto; -ms-flex-item-align: auto; align-self: auto; width: 21.09375%; }
 
-/* line 29, ../sass/partials/_flexbox.scss */
-div[role="main"] { display: -webkit-box; display: -moz-box; display: -ms-flexbox; /* display: -webkit-flex; */ display: flex; -webkit-box-align: center; -moz-box-align: center; -ms-flex-align: center; -webkit-align-items: center; align-items: center; height: 10rem; }
+/* line 38, ../sass/partials/_flexbox.scss */
+.flex-item:nth-child(2) { -webkit-order: 0; -ms-flex-order: 0; order: 0; -webkit-flex: 0 1 auto; -ms-flex: 0 1 auto; flex: 0 1 auto; -webkit-align-self: auto; -ms-flex-item-align: auto; align-self: auto; width: 35.15625%; }
+
+/* line 51, ../sass/partials/_flexbox.scss */
+.flex-item:nth-child(3) { -webkit-order: 0; -ms-flex-order: 0; order: 0; -webkit-flex: 0 1 auto; -ms-flex: 0 1 auto; flex: 0 1 auto; -webkit-align-self: auto; -ms-flex-item-align: auto; align-self: auto; width: 35.15625%; }
+
+/* line 65, ../sass/partials/_flexbox.scss */
+nav { display: -ms-flexbox; display: -webkit-flex; display: flex; -webkit-flex-direction: column; -ms-flex-direction: column; flex-direction: column; -webkit-flex-wrap: nowrap; -ms-flex-wrap: nowrap; flex-wrap: nowrap; -webkit-align-content: flex-start; -ms-flex-line-pack: start; align-content: flex-start; -webkit-align-items: flex-start; -ms-flex-align: start; align-items: flex-start; -webkit-justify-content: space-between; justify-content: space-between; height: 409px; }
+
+/* line 86, ../sass/partials/_flexbox.scss */
+.navi:nth-child(1) { -webkit-order: 0; -ms-flex-order: 0; order: 0; -webkit-flex: 0 1 auto; -ms-flex: 0 1 auto; flex: 0 1 auto; -webkit-align-self: auto; -ms-flex-item-align: auto; align-self: auto; }
+
+/* line 99, ../sass/partials/_flexbox.scss */
+.navi:nth-child(2) { -webkit-order: 0; -ms-flex-order: 0; order: 0; -webkit-flex: 0 1 auto; -ms-flex: 0 1 auto; flex: 0 1 auto; -webkit-align-self: auto; -ms-flex-item-align: auto; align-self: auto; }
+
+/* line 112, ../sass/partials/_flexbox.scss */
+.navi { border: 2px solid #999; height: 189px; width: 216px; }
+
+/* line 119, ../sass/partials/_flexbox.scss */
+.main { height: 816px; }
+
+/* line 124, ../sass/partials/_flexbox.scss */
+.main, section { display: -ms-flexbox; display: -webkit-flex; display: flex; -webkit-flex-direction: column; -ms-flex-direction: column; flex-direction: column; -webkit-flex-wrap: nowrap; -ms-flex-wrap: nowrap; flex-wrap: nowrap; -webkit-align-content: flex-start; -ms-flex-line-pack: start; align-content: flex-start; -webkit-align-items: flex-start; -ms-flex-align: start; align-items: flex-start; -webkit-justify-content: space-between; justify-content: space-between; width: 360px; }
+
+/* line 145, ../sass/partials/_flexbox.scss */
+section { height: 601px; }
+
+/* line 150, ../sass/partials/_flexbox.scss */
+header { -webkit-order: 0; -ms-flex-order: 0; order: 0; -webkit-flex: 0 1 auto; -ms-flex: 0 1 auto; flex: 0 1 auto; -webkit-align-self: auto; -ms-flex-item-align: auto; align-self: auto; border: 2px solid #999; height: 189px; width: 360px; }
+
+/* line 164, ../sass/partials/_flexbox.scss */
+article:nth-child(1) { -webkit-order: 0; -ms-flex-order: 0; order: 0; -webkit-flex: 0 1 auto; -ms-flex: 0 1 auto; flex: 0 1 auto; -webkit-align-self: auto; -ms-flex-item-align: auto; align-self: auto; border: 2px solid #999; height: 378px; width: 360px; }
+
+/* line 178, ../sass/partials/_flexbox.scss */
+article:nth-child(2) { -webkit-order: 0; -ms-flex-order: 0; order: 0; -webkit-flex: 0 1 auto; -ms-flex: 0 1 auto; flex: 0 1 auto; -webkit-align-self: auto; -ms-flex-item-align: auto; align-self: auto; border: 2px solid #999; height: 189px; width: 360px; }
+
+/* line 200, ../sass/partials/_flexbox.scss */
+aside { border: 2px solid #999; height: 400px; }
 
 /* line 1, ../sass/partials/_type.scss */
 h1 { margin: 0; padding-top: .5em; font-size: 1em; letter-spacing: 2px; }
@@ -177,15 +211,12 @@ h3 { margin: 0; padding-top: .2em; font-size: 1em; letter-spacing: 2px; }
 /* line 23, ../sass/partials/_type.scss */
 h4 { margin: 0; padding-top: .5em; font-size: 1em; letter-spacing: 2px; }
 
-/* line 30, ../sass/partials/_type.scss */
-article { max-width: 30em; margin: 0 auto .2em auto; padding: 2em 3em; border: 1px solid rgba(0, 0, 0, 0.07); border-bottom: 0; background-color: #fff; }
-
-/* line 39, ../sass/partials/_type.scss */
+/* line 32, ../sass/partials/_type.scss */
 p { text-indent: 1.25em; }
 
-@media screen and (min-width: 1300px) { /* line 48, ../sass/partials/_type.scss */
+@media screen and (min-width: 1300px) { /* line 41, ../sass/partials/_type.scss */
   body { font-size: 24px; } }
-@media screen and (min-width: 1800px) { /* line 49, ../sass/partials/_type.scss */
+@media screen and (min-width: 1800px) { /* line 42, ../sass/partials/_type.scss */
   body { font-size: 30px; text-rendering: optimizeLegibility; -webkit-font-smoothing: antialiased; } }
-@media screen and (min-width: 2100px) { /* line 50, ../sass/partials/_type.scss */
+@media screen and (min-width: 2100px) { /* line 43, ../sass/partials/_type.scss */
   body { font-size: 36px; text-rendering: optimizeLegibility; -webkit-font-smoothing: antialiased; } }
