--- a/sass/partials/_flexbox.scss
+++ b/sass/partials/_flexbox.scss
@@ -3,12 +3,20 @@
     display: -webkit-flex;
     display: flex;
 }
-
-@mixin containerRow {
-    @include displayFlex;
+@mixin direction-row {
     -webkit-flex-direction: row;
     -ms-flex-direction: row;
     flex-direction: row;
+}
+@mixin direction-col {
+    -webkit-flex-direction: column;
+    -ms-flex-direction: column;
+    flex-direction: column;
+}
+
+@mixin containerRow {
+    @include displayFlex;
+    @include direction-row;
     -webkit-flex-wrap: nowrap;
     -ms-flex-wrap: nowrap;
     flex-wrap: nowrap;
@@ -21,9 +29,7 @@
 }
  @mixin containerCol { 
     @include displayFlex;
-    -webkit-flex-direction: column;
-    -ms-flex-direction: column;
-    flex-direction: column;
+    @include direction-col;
     -webkit-flex-wrap: nowrap;
     -ms-flex-wrap: nowrap;
     flex-wrap: nowrap;
@@ -45,13 +51,15 @@
     -ms-flex-item-align: auto;
     align-self: auto;
 }
-
+html {
+    background-color: #333333;
+}
 body {
-    width: 978px;
+    width: 95.5078125%;
     margin: 0 auto;   
     @include containerRow;
-    -webkit-justify-content: space-between;
-    justify-content: space-between;
+    -webkit-justify-content: space-around;
+    justify-content: space-around;
     }
 
 .flex-item:nth-child(1) {
@@ -93,7 +101,7 @@ nav {
 .navi {
     border: 2px solid #999;
     height: 189px;
-    width: 216px;
+    width: 100%;
 }
 
 // center row ==================================|
@@ -108,10 +116,10 @@ nav {
     @include containerCol;
      -webkit-justify-content: space-between;
     justify-content: space-between;
-    width: 360px;
+    width: 100%;
     
 }
-section {
+section{
     height: 601px;
 
 }
@@ -120,19 +128,19 @@ header{
     @include flexItem;
     border: 2px solid #999;
     height: 189px;
-    width: 360px;
-}
+    width: 100%;
+    }
 article:nth-child(1) {
     @include flexItem;
     border: 2px solid #999;
     height: 378px;
-    width: 360px;
+    width: 100%;
     }
 article:nth-child(2) {
     @include flexItem;
     border: 2px solid #999;
     height: 189px;
-    width: 360px;
+    width: 100%;
     }
 
 
@@ -143,8 +151,57 @@ article:nth-child(2) {
 
 
 aside {
+     @include containerCol;
+     -webkit-justify-content: space-between;
+     justify-content: space-between;
+     width: 100%;
+     height: 593px;
+}
+aside:nth-child(1){
+    @include flexItem;
+}
+aside:nth-child(2){
+    @include flexItem;
+}
+aside:last-child(3){
+    @include flexItem;
+}
+.archive{
     border: 2px solid #999;
     height: 400px;
-    
+    width: 100%;
+}
 
+.contact {
+    -webkit-justify-content: space-between;
+    justify-content: space-between;
+    @include containerRow;
+    height: 100px;
+    width: 100%;
+    -webkit-justify-content: space-between;
+    justify-content: space-between;
+    
+}
+.contact:nth-child(1){
+    @include flexItem;
+}
+.contact:nth-child(2){
+    @include flexItem;
+}
+.contact:nth-child(3){
+    @include flexItem;
+}
+.contactSub{
+    height: 100px;
+    width: 27.77777777777778%;
+    border: 2px solid #999;
+
+}
+.rights {
+    height: 26px;
+    width: 100%;
+    border: 2px solid #999;
+    text-align: right;
+    padding: 10px 10px 0 0;
+    color: #999;
 }
