layout, mixins, and flexbox partials added or updated

--- a/sass/styles.scss
+++ b/sass/styles.scss
@@ -1,6 +1,7 @@
 @import "compass";
 @import "partials/variables";
+@import "partials/mixins";
 @import "partials/normalize";
-@import "partials/cookbook";
 @import "partials/flexbox";
+@import "partials/layout";
 @import "partials/type";
